Add FAQ to Header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -55,6 +55,9 @@ const iconSrc = `${base}favicon.svg`;
       <NavTooltipLink href={link('about/')} tip="What LifeLoggerz is and who’s behind it">
         About
       </NavTooltipLink>
+      <NavTooltipLink href={link('faq/')} tip="Got a Question? Answers here">
+        FAQ
+      </NavTooltipLink>
     </div>
 
     <!-- Socials + Contact -->
