--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -113,6 +113,7 @@ const iconSrc = `${base}favicon.svg`;
           <HeaderLink href={link('inspirations/')}>Inspirations</HeaderLink>
           <HeaderLink href={link('timeline/')}>Timeline</HeaderLink>
           <HeaderLink href={link('about/')}>About</HeaderLink>
+          <HeaderLink href={link('faq/')}>FAQ</HeaderLink>
         </div>
 
         <!-- Socials in mobile menu -->
