--- a/src/pages/faq.astro
+++ b/src/pages/faq.astro
@@ -9,7 +9,7 @@ import AboutLayout from '../layouts/AboutLayout.astro';
   pubDate="2025-10-20"
   wide={true}
   showViews={false}
-  heroImage="/images/about-lifeloggerz.gif"
+  heroImage="/images_webp/faq-movie.webp"
 >
   <div class="faq">
     <p>
